// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo esv variable describe "frodo esv variable describe --json --usage --variable-id esv-test-var-pi --directory test/e2e/exports/all-separate/cloud": should describe the esv variable "esv-test-var-pi" with usage from directory test/e2e/exports/all-separate/cloud and json output 1`] = `
"{
  _id: 'esv-test-var-pi',
  description: 'This is another test variable.',
  expressionType: 'number',
  lastChangeDate: '2026-07-07T13:42:44.956161Z',
  lastChangedBy: 'Frodo-SA-1782747461119',
  loaded: true,
  value: '3.1415926',
  locations: [
    "realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.0",
    "realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.4"
  ]
}
"
`;

exports[`frodo esv variable describe "frodo esv variable describe --json --usage --variable-id esv-test-var-pi --file test/e2e/exports/all/all.cloud.json": should describe the esv variable "esv-test-var-pi" with usage from file test/e2e/exports/all/all.cloud.json and json output 1`] = `
"{
  _id: 'esv-test-var-pi',
  description: 'This is another test variable.',
  expressionType: 'number',
  lastChangeDate: '2026-07-07T13:42:44.956161Z',
  lastChangedBy: 'Frodo-SA-1782747461119',
  loaded: true,
  value: '3.1415926',
  locations: [
    "realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script"
  ]
}
"
`;

exports[`frodo esv variable describe "frodo esv variable describe -i esv-neo-age": should describe the esv variable "esv-neo-age" 1`] = `
"Name         │esv-neo-age             
Value        │28                      
Type         │int                     
Status       │loaded                  
Description  │Neo's age in the matrix.
Modified     │7/7/2026, 1:42:42 PM    
Modifier UUID│Frodo-SA-1782747461119  
"
`;

exports[`frodo esv variable describe "frodo esv variable describe -ui esv-test-var-pi -D test/e2e/exports/all-separate/cloud": should describe the esv variable "esv-test-var-pi" with usage from directory test/e2e/exports/all-separate/cloud 1`] = `
"Name                     │esv-test-var-pi                                                                                                      
Value                    │3.1415926                                                                                                            
Type                     │number                                                                                                               
Status                   │loaded                                                                                                               
Description              │This is another test variable.                                                                                       
Modified                 │7/7/2026, 1:42:44 PM                                                                                                 
Modifier UUID            │Frodo-SA-1782747461119                                                                                               
Usage Locations (2 total)│realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.0
                         │realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script.4
"
`;

exports[`frodo esv variable describe "frodo esv variable describe -ui esv-test-var-pi -f test/e2e/exports/all/all.cloud.json": should describe the esv variable "esv-test-var-pi" with usage from file test/e2e/exports/all/all.cloud.json 1`] = `
"Name                     │esv-test-var-pi                                                                                                    
Value                    │3.1415926                                                                                                          
Type                     │number                                                                                                             
Status                   │loaded                                                                                                             
Description              │This is another test variable.                                                                                     
Modified                 │7/7/2026, 1:42:44 PM                                                                                               
Modifier UUID            │Frodo-SA-1782747461119                                                                                             
Usage Locations (1 total)│realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script
"
`;

exports[`frodo esv variable describe "frodo esv variable describe -ui esv-test-var-pi": should describe the esv variable "esv-test-var-pi" with usage 1`] = `
"Name                     │esv-test-var-pi               
Value                    │3.1415926                     
Type                     │number                        
Status                   │loaded                        
Description              │This is another test variable.
Modified                 │7/7/2026, 1:42:44 PM          
Modifier UUID            │Frodo-SA-1782747461119        
Usage Locations (0 total)│                              
"
`;
